RESOLVED FIXED 257304
[iOS] Fix build after 263932@main
https://bugs.webkit.org/show_bug.cgi?id=257304
Summary [iOS] Fix build after 263932@main
Abrar Rahman Protyasha
Reported 2023-05-24 22:50:26 PDT
The build broke after 263932@main because IOSApplication:: needs to be prefixed by the WebCore:: namespace
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-24 22:50:37 PDT
Abrar Rahman Protyasha
Comment 2 2023-05-24 22:52:52 PDT
EWS
Comment 3 2023-05-24 22:58:34 PDT
Committed 264504@main (fd6869665973): <https://commits.webkit.org/264504@main> Reviewed commits have been landed. Closing PR #14328 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.