[iOS] Fix build after 263932@main https://bugs.webkit.org/show_bug.cgi?id=257304 rdar://109814579

Reviewed by Aditya Keerthi.

We need to access IOSApplication::isHoYoLAB() from the WebCore
namespace. This commit fixes that.

* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultShouldEnableScreenOrientationAPI):

Canonical link: https://commits.webkit.org/264504@main